--- a/css/main.css
+++ b/css/main.css
@@ -228,12 +228,19 @@
 }
 
 .modal__title {
-  height: 23px;
+  height: 60px;
   font-weight: 700;
   line-height: 1.15;
   font-size: 20px;
   text-align: center;
   color: #212121;
+  width: 370px;
+}
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    width: 448px;
+    height: 23px;
+  }
 }
 
 .features__title {
@@ -343,9 +350,10 @@
   display: flex;
   justify-content: center;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .subscribe__texts {
     margin-top: 0;
+    justify-content: left;
   }
 }
 
@@ -559,14 +567,20 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 581px;
-  width: 528px;
+  height: 609px;
+  width: 450px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: absolute;
   z-index: 1;
   transition-property: revert;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    height: 581px;
+    width: 528px;
+  }
 }
 .modal__form {
   padding: 40px;
@@ -589,6 +603,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+  justify-content: center;
 }
 .modal__btn:hover .modal__cross, .modal__btn:focus .modal__cross {
   fill: #2196f3;
@@ -597,6 +612,7 @@
 
 .form {
   margin-bottom: 20px;
+  margin-top: 12px;
 }
 .form__field {
   position: relative;
@@ -609,12 +625,18 @@
 }
 
 .form__input {
-  width: 448px;
+  width: 370px;
   min-height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition-property: border;
+}
+@media screen and (min-width: 1200px) {
+  .form__input {
+    width: 448px;
+    min-height: 40px;
+  }
 }
 .form__input:hover, .form__input:focus {
   border: 1px solid rgb(33, 150, 243);
@@ -646,7 +668,7 @@
 }
 
 .form__textarea {
-  width: 448px;
+  width: 370px;
   height: 120px;
   resize: none;
   padding: 12px 16px;
@@ -654,6 +676,11 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition-property: border;
+}
+@media screen and (min-width: 1200px) {
+  .form__textarea {
+    width: 448px;
+  }
 }
 .form__textarea:hover, .form__textarea:focus {
   border: 1px solid rgb(33, 150, 243);
@@ -676,10 +703,21 @@
 }
 
 .form__agreement {
-  width: 423px;
-  height: 24px;
   margin-left: auto;
   margin-right: auto;
+  width: 370px;
+  height: 15px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .form__agreement {
+    width: 423px;
+    height: 24px;
+    font-size: 14px;
+    line-height: 2;
+  }
 }
 
 .form__checkbox {
@@ -753,6 +791,8 @@
 .features__item {
   width: 100%;
   padding-bottom: 30px;
+  z-index: -1;
+  position: relative;
 }
 @media screen and (min-width: 768px) {
   .features__item {
@@ -1117,6 +1157,7 @@
 .button--flex {
   width: 200px;
   margin-top: 30px;
+  padding: 10px 28px 10px 31px;
 }
 @media screen and (min-width: 768px) {
   .button--flex {
@@ -1126,6 +1167,7 @@
 @media screen and (min-width: 1200px) {
   .button--flex {
     width: 200px;
+    padding: 10px 32px;
     margin-top: 0;
   }
 }
@@ -1133,7 +1175,17 @@
 .footer__icon {
   width: 24px;
   height: 23px;
-  margin-left: 10px;
+  margin-left: 12px;
+}
+@media screen and (min-width: 768px) {
+  .footer__icon {
+    margin-left: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__icon {
+    margin-left: 10px;
+  }
 }
 
 @media screen and (min-width: 768px) {
