--- a/sass/layout/_decision.scss
+++ b/sass/layout/_decision.scss
@@ -46,8 +46,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 581px;
-  width: 528px;
+  height: 609px;
+  width: 450px;
   background-color: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -56,6 +56,11 @@
   z-index: 1;
   transition-property: revert;
   @extend %cubic-bezier;
+
+  @media screen and (min-width: $desktop) {
+    height: 581px;
+    width: 528px;
+  }
 
   &__form {
     padding: 40px;
@@ -83,6 +88,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+  justify-content: center;
 
   &:hover .modal__cross,
   &:focus .modal__cross {
@@ -93,6 +99,7 @@
 
 .form {
   margin-bottom: 20px;
+  margin-top: 12px;
 
   &__field {
     position: relative;
@@ -106,13 +113,18 @@
 }
 
 .form__input {
-  width: 448px;
+  width: 370px;
   min-height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition-property: border;
   @extend %cubic-bezier;
+
+  @media screen and (min-width: $desktop) {
+    width: 448px;
+    min-height: 40px;
+  }
 
   &:hover,
   &:focus {
@@ -149,7 +161,7 @@
 }
 
 .form__textarea {
-  width: 448px;
+  width: 370px;
   height: 120px;
   resize: none;
   padding: 12px 16px;
@@ -158,6 +170,10 @@
   border-radius: 4px;
   transition-property: border;
   @extend %cubic-bezier;
+
+  @media screen and (min-width: $desktop) {
+    width: 448px;
+  }
 
   &:hover,
   &:focus {
@@ -174,10 +190,20 @@
 
 .form__agreement {
   @extend %flexbox;
-  width: 423px;
-  height: 24px;
   margin-left: auto;
   margin-right: auto;
+  width: 370px;
+  height: 15px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+
+  @media screen and (min-width: $desktop) {
+    width: 423px;
+    height: 24px;
+    font-size: 14px;
+    line-height: 2;
+  }
 }
 
 .form__checkbox {
@@ -189,6 +215,7 @@
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
+  
 }
 
 .form__pic {
