--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -24,6 +24,8 @@
   &__item {
     width: 100%;
     padding-bottom: 30px;
+    z-index: -1;
+    position: relative;
 
     @media screen and (min-width: $tablet) {
       width: 354px;
