--- a/sass/components/_section-styles.scss
+++ b/sass/components/_section-styles.scss
@@ -13,6 +13,7 @@
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  min-width: 450px;
 
   @media screen and (min-width: $tablet) {
     min-width: 768px;
