--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,8 +1,9 @@
 .customers {
   display: flex;
   flex-wrap: wrap;
-  min-width: 450px;
-  margin: 0;
+  width: 450px;
+  margin-right: auto;
+  margin-left: auto;
   justify-content: center;
  
   &__unit {
@@ -18,9 +19,10 @@
   }
 
   @media screen and (min-width: $tablet) {
-  min-width: 738px;
-  margin: 0;
-  justify-content: center;
+    width: 738px;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
 
   &__unit {
     width: 226px;
