--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -4,6 +4,9 @@
   &__list {
     display: flex;
     flex-wrap: wrap;
+    width: 450px;
+    margin-right: auto;
+    margin-left: auto;
 
     @media screen and (min-width: $tablet) {
       flex-wrap: wrap;
@@ -18,6 +21,8 @@
       align-items: baseline;
       justify-content: space-between;
       width: 1170px;
+      margin-right: auto;
+      margin-left: auto;
     }
   }
 
