--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,12 +8,16 @@
     align-items: center;
     flex-wrap: nowrap;
     flex-direction: column;
-    width: 450px;
+    min-width: 450px;
+    margin-right: auto;
+    margin-left: auto;
     justify-content: center;
 
     @media screen and (min-width: $tablet) {
       flex-wrap: wrap;
-      width: 100%;
+      width: 738px;
+      margin-right: auto;
+      margin-left: auto;
       flex-direction: inherit;
       align-items: baseline
     }
@@ -23,6 +27,9 @@
     align-items: baseline;
     flex-wrap: nowrap;
     flex-direction: row;
+    width: 1170px;
+    margin-right: auto;
+    margin-left: auto;
     }
   }
 
@@ -34,8 +41,6 @@
     align-items: center;
     display: flex;
     justify-content: center;
-
-    @media screen and (min-width: $tablet) {}
 
     @media screen and (min-width: $desktop) {
       justify-content: flex-start;
@@ -50,8 +55,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-  @media screen and (min-width: $tablet) {}
 
   @media screen and (min-width: $desktop) {
     align-items: baseline;
@@ -107,10 +110,6 @@
   margin-right: auto;
   min-width: 450px;
 
-  @media screen and (min-width: $tablet) {
-    
-  }
-
   @media screen and (min-width: $desktop) {
     margin-left: 93px;
     width: 570px;
@@ -147,8 +146,6 @@
     rgba(33, 150, 243, 0),
     rgba(33, 150, 243, 0)
   );
-
-  @media screen and (min-width: $tablet) {}
 
   @media screen and (min-width: $desktop) {
     width: 358px;
