--- a/sass/layout/_stuff.scss
+++ b/sass/layout/_stuff.scss
@@ -8,6 +8,9 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 450px;
+    margin-right: auto;
+    margin-left: auto;
 
     @media screen and (min-width: $tablet) {
       width: 738px;
