--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -641,6 +641,7 @@
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+  min-width: 450px;
 }
 .footer__box {
   display: flex;
