--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,7 @@
   background-color: $grey-background;
   padding-top: 60px;
   padding-bottom: 60px;
+  min-width: 450px;
 
   &__box {
     display: flex;
