--- a/sass/layout/_stuff.scss
+++ b/sass/layout/_stuff.scss
@@ -2,6 +2,7 @@
   margin-bottom: 0;
   padding-top: 94px;
   background-color: $tittle-background-color;
+  min-width: 450px;
 
   &__list {
     display: flex;
