--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,13 @@
   display: none;
 }
 
-.footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__container, .modal__title, .actions__icon, .actions__network, .actions {
+.footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__navigation, .header .container, .modal__title, .actions__icon, .actions__network, .actions {
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
 @media screen and (min-width: 768px) {
-  .footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__container, .modal__title, .actions__icon, .actions__network, .actions {
+  .footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__navigation, .header .container, .modal__title, .actions__icon, .actions__network, .actions {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -123,20 +123,24 @@
 }
 
 .container {
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  min-width: 450px;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
 }
 @media screen and (min-width: 768px) {
   .container {
-    min-width: 768px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -203,7 +207,7 @@
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-  width: 360px;
+  width: 100%;
   color: #ffffff;
   font-weight: 900;
   font-size: 26px;
@@ -211,9 +215,14 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+@media screen and (min-width: 768px) {
+  .decision__title {
+    width: 360px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .decision__title {
-    ont-weight: 900;
+    font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     width: 696px;
@@ -235,7 +244,6 @@
   font-size: 20px;
   text-align: center;
   color: #212121;
-  width: 370px;
 }
 @media screen and (min-width: 1200px) {
   .modal__title {
@@ -258,7 +266,7 @@
   line-height: 1.14;
   font-weight: 700;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .features__subtitle {
     text-align: start;
   }
@@ -362,13 +370,18 @@
   padding: 0;
   border-bottom: 1px solid rgb(236, 236, 236);
 }
-.header__container {
+.header .container {
   min-height: 60px;
+  position: relative;
 }
 @media screen and (min-width: 768px) {
-  .header__container {
+  .header .container {
     height: 80px;
   }
+}
+.header__block {
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav {
@@ -496,7 +509,7 @@
 
 .header__btn {
   position: absolute;
-  right: 15px;
+  right: 21px;
   top: 10px;
   display: flex;
   align-items: center;
@@ -527,14 +540,12 @@
 
 .decision {
   height: 400px;
-  min-width: 450px;
+  width: 100%;
   padding-top: 118px;
   padding-bottom: 118px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0;
   box-sizing: border-box;
   text-align: center;
-  background-color: rgb(196, 196, 196);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/newbgr.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -546,6 +557,7 @@
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-color: rgb(196, 196, 196);
   }
 }
 
@@ -569,14 +581,18 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 609px;
-  width: 450px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: absolute;
   z-index: 1;
   transition-property: revert;
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    height: 609px;
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -599,8 +615,8 @@
   padding: 0;
   width: 30px;
   height: 30px;
-  right: 8px;
-  top: 8px;
+  right: 30px;
+  top: 15px;
   background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -611,10 +627,25 @@
   fill: #2196f3;
   outline: none;
 }
+@media screen and (min-width: 480px) {
+  .modal__btn {
+    right: 8px;
+    top: 8px;
+  }
+}
 
 .form {
   margin-bottom: 20px;
   margin-top: 12px;
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media screen and (min-width: 480px) {
+  .form {
+    width: 100%;
+    margin: 0;
+  }
 }
 .form__field {
   position: relative;
@@ -627,17 +658,21 @@
 }
 
 .form__input {
-  width: 370px;
+  width: 270px;
   min-height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition-property: border;
 }
+@media screen and (min-width: 480px) {
+  .form__input {
+    width: 370px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .form__input {
     width: 448px;
-    min-height: 40px;
   }
 }
 .form__input:hover, .form__input:focus {
@@ -670,7 +705,7 @@
 }
 
 .form__textarea {
-  width: 370px;
+  width: 270px;
   height: 120px;
   resize: none;
   padding: 12px 16px;
@@ -678,6 +713,11 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition-property: border;
+}
+@media screen and (min-width: 480px) {
+  .form__textarea {
+    width: 370px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .form__textarea {
@@ -707,11 +747,19 @@
 .form__agreement {
   margin-left: auto;
   margin-right: auto;
-  width: 370px;
+  width: 300px;
   height: 15px;
-  font-size: 12px;
+  font-size: 10px;
   line-height: 1.17;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
+}
+@media screen and (min-width: 480px) {
+  .form__agreement {
+    width: 370px;
+    height: 15px;
+    font-size: 12px;
+    line-height: 1.17;
+  }
 }
 @media screen and (min-width: 1200px) {
   .form__agreement {
@@ -768,32 +816,28 @@
 
 .features {
   padding-bottom: 0;
-  min-width: 450px;
 }
 .features__list {
   display: flex;
   flex-wrap: wrap;
-  width: 450px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 100%;
+  margin: 0;
+}
+@media screen and (min-width: 480px) {
+  .features__list {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 768px) {
   .features__list {
-    flex-wrap: wrap;
     align-items: baseline;
     justify-content: space-between;
     width: 738px;
-    margin-right: auto;
-    margin-left: auto;
   }
 }
 @media screen and (min-width: 1200px) {
   .features__list {
-    align-items: baseline;
-    justify-content: space-between;
     width: 1170px;
-    margin-right: auto;
-    margin-left: auto;
   }
 }
 .features__item {
@@ -805,12 +849,12 @@
 @media screen and (min-width: 768px) {
   .features__item {
     width: 354px;
-    position: relative;
   }
 }
 @media screen and (min-width: 1200px) {
   .features__item {
     width: 270px;
+    justify-content: space-between;
   }
 }
 .features__box {
@@ -818,16 +862,6 @@
   margin-bottom: 30px;
   border-radius: 4px;
   background-color: #f5f4fa;
-}
-@media screen and (min-width: 768px) {
-  .features__box {
-    width: 354px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .features__box {
-    width: 270px;
-  }
 }
 .features__svg {
   width: 70px;
@@ -837,13 +871,11 @@
 }
 @media screen and (min-width: 768px) {
   .features__svg {
-    position: absolute;
     left: 40%;
   }
 }
 @media screen and (min-width: 1200px) {
   .features__svg {
-    position: absolute;
     left: 37%;
   }
 }
@@ -885,31 +917,25 @@
 
 .stuff {
   margin-bottom: 0;
-  padding-top: 94px;
   background-color: #f5f4fa;
-  min-width: 450px;
 }
 .stuff__list {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  justify-content: space-between;
-  width: 450px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 100%;
+  margin: 0;
 }
 @media screen and (min-width: 768px) {
   .stuff__list {
     width: 738px;
-    margin-right: auto;
-    margin-left: auto;
+    justify-content: space-between;
   }
 }
 @media screen and (min-width: 1200px) {
   .stuff__list {
     width: 1170px;
-    margin-right: auto;
-    margin-left: auto;
   }
 }
 .stuff__item {
@@ -918,6 +944,11 @@
   background: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+@media screen and (min-width: 480px) {
+  .stuff__item {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 768px) {
   .stuff__item {
@@ -933,41 +964,41 @@
   display: block;
   width: 100%;
 }
-@media screen and (min-width: 1200px) {
-  .stuff__img {
-    width: 270px;
-  }
-}
 
 .customers {
   display: flex;
   flex-wrap: wrap;
-  width: 450px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 100%;
+  margin: 0;
   justify-content: center;
 }
 .customers__unit {
+  margin: 0 0 30px 0;
   width: 210px;
   height: 92px;
-  margin-left: 0;
-  margin-bottom: 30px;
 }
-.customers__unit:nth-child(odd) {
-  margin-right: 30px;
+@media screen and (min-width: 480px) {
+  .customers {
+    width: 450px;
+    margin: 0;
+    justify-content: center;
+  }
+  .customers__unit {
+    width: 210px;
+    height: 92px;
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+  .customers__unit:nth-child(odd) {
+    margin-right: 30px;
+  }
 }
 @media screen and (min-width: 768px) {
   .customers {
     width: 738px;
-    margin-right: auto;
-    margin-left: auto;
-    justify-content: center;
   }
   .customers__unit {
     width: 226px;
-    height: 92px;
-    margin-left: 0;
-    margin-bottom: 30px;
     margin-right: 30px;
   }
   .customers__unit:nth-child(3n) {
@@ -977,12 +1008,9 @@
 @media screen and (min-width: 1200px) {
   .customers {
     min-width: 1170px;
-    margin: 0;
-    justify-content: center;
   }
   .customers__unit {
     width: 170px;
-    height: 92px;
     margin-right: 0;
     margin-left: 30px;
   }
@@ -1037,24 +1065,26 @@
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
-  min-width: 450px;
+  width: 100%;
 }
 .footer__box {
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
   flex-direction: column;
-  min-width: 450px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 100%;
+  margin: 0;
   justify-content: center;
+}
+@media screen and (min-width: 480px) {
+  .footer__box {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 768px) {
   .footer__box {
     flex-wrap: wrap;
     width: 738px;
-    margin-right: auto;
-    margin-left: auto;
     flex-direction: inherit;
     align-items: baseline;
   }
@@ -1066,8 +1096,6 @@
     flex-wrap: nowrap;
     flex-direction: row;
     width: 1170px;
-    margin-right: auto;
-    margin-left: auto;
   }
 }
 .footer__address {
@@ -1132,9 +1160,14 @@
 
 .footer-form {
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  min-width: 450px;
+  margin: 0;
+  min-width: 100%;
+  justify-content: center;
+}
+@media screen and (min-width: 480px) {
+  .footer-form {
+    min-width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-form {
@@ -1146,8 +1179,13 @@
 .footer__field {
   flex-direction: column;
   text-align: center;
-  width: 450px;
+  width: 100%;
   align-items: center;
+}
+@media screen and (min-width: 480px) {
+  .footer__field {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer__field {
@@ -1158,16 +1196,20 @@
 }
 
 .footer__input {
-  width: 450px;
+  min-width: 300px;
   height: 48px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #fff;
   background: linear-gradient(0deg, rgba(33, 150, 243, 0), rgba(33, 150, 243, 0));
+}
+@media screen and (min-width: 480px) {
+  .footer__input {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer__input {
@@ -1179,17 +1221,11 @@
 
 .button--flex {
   width: 200px;
-  margin-top: 30px;
+  margin-top: 20px;
   padding: 10px 28px 10px 31px;
-}
-@media screen and (min-width: 768px) {
-  .button--flex {
-    margin-top: 20px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .button--flex {
-    width: 200px;
     padding: 10px 32px;
     margin-top: 0;
   }
