--- a/sass/components/_section-styles.scss
+++ b/sass/components/_section-styles.scss
@@ -9,17 +9,20 @@
 
 }
 .container {
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  min-width: 450px;
+  width: 100%;
+
+  @media screen and (min-width: $mobile) {
+    max-width: 480px;
+  }
 
   @media screen and (min-width: $tablet) {
-    min-width: 768px;
+    max-width: 768px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
