--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,34 +1,38 @@
 .customers {
   display: flex;
   flex-wrap: wrap;
-  width: 450px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 100%;
+  margin: 0;
   justify-content: center;
  
   &__unit {
+    margin: 0 0 30px 0;
     width: 210px;
     height: 92px;
-    margin-left: 0;
-    margin-bottom: 30px;
-
   }
-  
-  &__unit:nth-child(odd) {
-    margin-right: 30px;
+
+  @media screen and (min-width: $mobile) {
+    width: 450px;
+    margin: 0;
+    justify-content: center;
+
+    &__unit {
+      width: 210px;
+      height: 92px;
+      margin-left: 0;
+      margin-bottom: 30px;
+    }
+    
+    &__unit:nth-child(odd) {
+      margin-right: 30px;
+    }
   }
 
   @media screen and (min-width: $tablet) {
     width: 738px;
-    margin-right: auto;
-    margin-left: auto;
-    justify-content: center;
 
   &__unit {
     width: 226px;
-    height: 92px;
-    margin-left: 0;
-    margin-bottom: 30px;
     margin-right: 30px;
   }
 
@@ -39,12 +43,9 @@
 
   @media screen and (min-width: $desktop) {
   min-width: 1170px;
-  margin: 0;
-  justify-content: center;
 
     &__unit {
       width: 170px;
-      height: 92px;
       margin-right: 0;
       margin-left: 30px;
     }
