--- a/sass/layout/_decision.scss
+++ b/sass/layout/_decision.scss
@@ -1,13 +1,11 @@
 .decision {
   height: 400px;
-  min-width: 450px;
+  width: 100%;
   padding-top: 118px;
   padding-bottom: 118px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0;
   box-sizing: border-box;
   text-align: center;
-  background-color: $new-bgr;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -23,6 +21,7 @@
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-color: $new-bgr;
   }
 }
 
@@ -47,8 +46,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 609px;
-  width: 450px;
   background-color: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -57,6 +54,11 @@
   z-index: 1;
   transition-property: revert;
   @extend %cubic-bezier;
+
+  @media screen and (min-width: $mobile) {
+    height: 609px;
+    width: 450px;
+  }
 
   @media screen and (min-width: $desktop) {
     height: 581px;
@@ -83,8 +85,8 @@
   padding: 0;
   width: 30px;
   height: 30px;
-  right: 8px;
-  top: 8px;
+  right: 30px;
+  top: 15px;
   background-color: $white-color;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -96,11 +98,26 @@
     fill: $accent-color;
     outline: none;
   }
+
+  @media screen and (min-width: $mobile) {
+    right: 8px;
+    top: 8px;
+  }
 }
 
 .form {
   margin-bottom: 20px;
   margin-top: 12px;
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media screen and (min-width: $mobile) {
+    width: 100%;
+    margin: 0;
+  }
+  
+
 
   &__field {
     position: relative;
@@ -114,7 +131,7 @@
 }
 
 .form__input {
-  width: 370px;
+  width: 270px;
   min-height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -122,9 +139,12 @@
   transition-property: border;
   @extend %cubic-bezier;
 
+  @media screen and (min-width: $mobile) {
+    width: 370px;
+  }
+
   @media screen and (min-width: $desktop) {
     width: 448px;
-    min-height: 40px;
   }
 
   &:hover,
@@ -162,7 +182,7 @@
 }
 
 .form__textarea {
-  width: 370px;
+  width: 270px;
   height: 120px;
   resize: none;
   padding: 12px 16px;
@@ -171,6 +191,10 @@
   border-radius: 4px;
   transition-property: border;
   @extend %cubic-bezier;
+
+  @media screen and (min-width: $mobile) {
+    width: 370px;
+  }
 
   @media screen and (min-width: $desktop) {
     width: 448px;
@@ -193,11 +217,18 @@
   @extend %flexbox;
   margin-left: auto;
   margin-right: auto;
-  width: 370px;
+  width: 300px;
   height: 15px;
-  font-size: 12px;
+  font-size: 10px;
   line-height: 1.17;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
+
+  @media screen and (min-width: $mobile) {
+    width: 370px;
+    height: 15px;
+    font-size: 12px;
+    line-height: 1.17;
+  }
 
   @media screen and (min-width: $desktop) {
     width: 423px;
