--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,14 +2,24 @@
     padding: 0;
     border-bottom: 1px solid rgba(236, 236, 236, 1);
   
-   &__container {
+   & .container {
      @extend %flexbox;
      min-height: 60px;
+     position: relative;
 
      @media screen and (min-width: $tablet) {
       height: 80px;
     }
    }
+
+   &__block {
+    display: flex;
+    justify-content: space-between;
+   }
+}
+
+.header__navigation {
+  @extend %flexbox;
 }
 
 .nav {
@@ -152,7 +162,7 @@
 
 .header__btn {
   position: absolute;
-  right: 15px;
+  right: 21px;
   top: 10px;
   display: flex;
   align-items: center;
