--- a/sass/layout/_stuff.scss
+++ b/sass/layout/_stuff.scss
@@ -1,28 +1,23 @@
 .stuff {
   margin-bottom: 0;
-  padding-top: 94px;
+  // padding-top: 94px;
   background-color: $tittle-background-color;
-  min-width: 450px;
 
   &__list {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 450px;
-    margin-right: auto;
-    margin-left: auto;
+    width: 100%;
+    margin: 0;
 
     @media screen and (min-width: $tablet) {
       width: 738px;
-      margin-right: auto;
-      margin-left: auto;
+      justify-content: space-between; 
     }
 
     @media screen and (min-width: $desktop) {
       width: 1170px;
-      margin-right: auto;
-      margin-left: auto;
     }
   }
 
@@ -32,6 +27,10 @@
     background: $white-color;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    @media screen and (min-width: $mobile) {
+      width: 450px;
+    }
 
     @media screen and (min-width: $tablet) {
       width: 354px;
@@ -46,11 +45,8 @@
   &__img {
     display: block;
     width: 100%;
-
-    @media screen and (min-width: $desktop) {
-      width: 270px;
-    }
   }
 }
+
 
 
