--- a/css/main.css
+++ b/css/main.css
@@ -635,11 +635,8 @@
 }
 
 .form {
-  margin-bottom: 20px;
-  margin-top: 12px;
+  margin: 12px 10px 20px 12px;
   width: 80%;
-  margin-right: auto;
-  margin-left: auto;
 }
 @media screen and (min-width: 480px) {
   .form {
@@ -752,6 +749,7 @@
   font-size: 10px;
   line-height: 1.17;
   letter-spacing: 0.02em;
+  margin-top: 20px;
 }
 @media screen and (min-width: 480px) {
   .form__agreement {
