--- a/sass/layout/_decision.scss
+++ b/sass/layout/_decision.scss
@@ -106,19 +106,14 @@
 }
 
 .form {
-  margin-bottom: 20px;
-  margin-top: 12px;
+  margin: 12px 10px 20px 12px;
   width: 80%;
-  margin-right: auto;
-  margin-left: auto;
 
   @media screen and (min-width: $mobile) {
     width: 100%;
     margin: 0;
   }
   
-
-
   &__field {
     position: relative;
     display: flex;
@@ -222,6 +217,7 @@
   font-size: 10px;
   line-height: 1.17;
   letter-spacing: 0.02em;
+  margin-top: 20px;
 
   @media screen and (min-width: $mobile) {
     width: 370px;
