--- a/sass/layout/_decision.scss
+++ b/sass/layout/_decision.scss
@@ -85,8 +85,8 @@
   padding: 0;
   width: 30px;
   height: 30px;
-  right: 30px;
-  top: 15px;
+  right: 8px;
+  top: 8px;
   background-color: $white-color;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -98,17 +98,9 @@
     fill: $accent-color;
     outline: none;
   }
-
-  @media screen and (min-width: $mobile) {
-    right: 8px;
-    top: 8px;
-  }
 }
 
 .form {
-  margin: 12px 10px 20px 12px;
-  width: 80%;
-
   @media screen and (min-width: $mobile) {
     width: 100%;
     margin: 0;
@@ -126,21 +118,12 @@
 }
 
 .form__input {
-  width: 270px;
   min-height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition-property: border;
   @extend %cubic-bezier;
-
-  @media screen and (min-width: $mobile) {
-    width: 370px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    width: 448px;
-  }
 
   &:hover,
   &:focus {
@@ -177,7 +160,6 @@
 }
 
 .form__textarea {
-  width: 270px;
   height: 120px;
   resize: none;
   padding: 12px 16px;
@@ -186,14 +168,6 @@
   border-radius: 4px;
   transition-property: border;
   @extend %cubic-bezier;
-
-  @media screen and (min-width: $mobile) {
-    width: 370px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    width: 448px;
-  }
 
   &:hover,
   &:focus {
@@ -212,25 +186,22 @@
   @extend %flexbox;
   margin-left: auto;
   margin-right: auto;
-  width: 300px;
   height: 15px;
-  font-size: 10px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  margin-top: 20px;
+  font-size: 6px;
+  line-height: 1;
+  letter-spacing: .01em;
+  margin-top: 10px;
 
   @media screen and (min-width: $mobile) {
-    width: 370px;
-    height: 15px;
     font-size: 12px;
-    line-height: 1.17;
+    margin-top: 20px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 423px;
     height: 24px;
     font-size: 14px;
     line-height: 2;
+    margin-top: 20px;
   }
 }
 
