2part-adaptive-begining

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./base/common";
 @import "./components/button";
 @import "./components/logo";
+@import "./components/mobile-menu";
 @import "./components/section-styles";
 @import "./components/social-icon";
 @import "./components/textstyle";
