--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@
   }
 }
 
-.address__contact, .address__map, .customers__link, .customers__logo--accent, .form__button--effects, .form__textarea, .form__icon, .form__input, .modal__cross, .modal, .contacts__link--hover, .nav__link, .actions__network--white, .actions__icon--white, .actions__network--grey {
+.address__contact, .address__map, .customers__link, .customers__logo--accent, .form__button--effects, .form__textarea, .form__icon, .form__input, .modal__cross, .modal, .contacts__link--hover, .nav__link, .actions__network--white, .actions__icon--white, .actions__network--grey, .menu-cls-btn {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -109,6 +109,94 @@
 
 .for-logotype {
   width: 145px;
+}
+
+.menu {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+}
+.menu .link {
+  padding: 10px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu .link:hover,
+.menu .link:focus {
+  text-decoration: underline;
+}
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-toggle:hover .menu-cls-btn,
+.menu-toggle:focus .menu-cls-btn {
+  fill: #2196f3;
+  outline: none;
+}
+
+.menu-cls-btn {
+  height: 40px;
+  width: 40px;
+  fill: #212121;
+  transition-property: fill;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  color: #212121;
+  text-decoration: none;
 }
 
 .section {
@@ -505,37 +593,6 @@
 .contacts__icon {
   display: inline-block;
   margin-right: 10px;
-}
-
-.header__btn {
-  position: absolute;
-  right: 21px;
-  top: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  width: 40px;
-  height: 40px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-@media screen and (min-width: 768px) {
-  .header__btn {
-    display: none;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header__btn {
-    display: none;
-  }
-}
-
-.header__icon {
-  display: inline-block;
-  width: 24px;
-  height: 16px;
 }
 
 .decision {
