--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+.link {
+  text-decoration: none;
+}
+
 .is-hidden {
   visibility: hidden;
   opacity: 0;
@@ -29,9 +33,14 @@
   }
 }
 
-.address__contact, .address__map, .customers__link, .customers__logo--accent, .form__button--effects, .form__textarea, .form__icon, .form__input, .modal__cross, .modal, .contacts__link--hover, .nav__link, .actions__network--white, .actions__icon--white, .actions__network--grey, .menu-cls-btn {
+.address__contact, .address__map, .customers__link, .customers__logo--accent, .form__button--effects, .form__textarea, .form__icon, .form__input, .modal__cross, .modal, .contacts__link--hover, .nav__link, .actions__network--white, .actions__icon--white, .actions__network--grey, .mobile-contacts-link, .mobile-menu-link, .menu-cls-btn {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-social-link, .mobile-contacts-link, .mobile-menu-link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 .page {
@@ -173,6 +182,8 @@
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
   padding: 48px 40px;
@@ -187,16 +198,60 @@
 }
 
 .mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+  margin-bottom: auto;
 }
 
-.mobile-menu .link {
-  display: block;
-  padding: 10px;
+.mobile-menu-item {
+  margin-bottom: 32px;
+}
+
+.mobile-menu-link {
+  font-size: 40px;
   color: #212121;
-  text-decoration: none;
+  line-height: 1.18;
+  transition-property: color;
+}
+
+.mobile-menu-link.current {
+  color: #2196f3;
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-contacts-link {
+  font-size: 24px;
+  line-height: 1.17;
+  color: #757575;
+  transition-property: color;
+}
+
+.mobile-contacts-link.current {
+  color: #2196f3;
+  font-size: 34px;
+}
+
+.mobile-social-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-social-link {
+  padding-right: 10px;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #2196F3;
+}
+
+.mobile-social {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
 }
 
 .section {
