--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -65,6 +65,8 @@
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
   padding: 48px 40px;
@@ -80,14 +82,71 @@
 }
 
 .mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+  margin-bottom: auto;
+
 }
-  
-.mobile-menu .link {
-    display: block;
-    padding: 10px;
-    color: $title-text-color;
-    text-decoration: none;
+
+.mobile-menu-item {
+  margin-bottom: 32px;
 }
+
+.mobile-menu-link {
+  @extend %mobile-title;
+  font-size: 40px;
+  color: #212121;
+  line-height: 1.18;
+
+  transition-property: color;
+  @extend %cubic-bezier;
+}
+
+.mobile-menu-link.current {
+  color: $accent-color;
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-contacts-item {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+.mobile-contacts-link {
+  @extend %mobile-title;
+  font-size: 24px;
+  line-height: 1.17;
+  color: #757575;
+
+  transition-property: color;
+  @extend %cubic-bezier;
+}
+
+.mobile-contacts-link.current {
+  color: $accent-color;
+  font-size: 34px;
+}
+
+.mobile-social-item {
+  &:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+}
+
+.mobile-social-link {
+  padding-right: 10px;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #2196F3;
+  @extend %mobile-title;
+}  
+
+.mobile-social {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+
