--- a/sass/layout/_decision.scss
+++ b/sass/layout/_decision.scss
@@ -49,7 +49,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/bgr/img_bgr_desk_sm.jpg);
+    url(../../images/bgr/img_bgr_desk_sm.jpg);
 
     @include mq(retina) {
       background-image: linear-gradient(
@@ -57,7 +57,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/bgr/img_bgr_desk_lg.jpg);
+      url(../../images/bgr/img_bgr_desk_lg.jpg);
     }  
   }
 
