--- a/css/main.css
+++ b/css/main.css
@@ -20,20 +20,20 @@
   display: none;
 }
 
-.footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__navigation, .header .container, .modal__title, .actions__icon, .actions__network, .actions {
+.filter, .footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__navigation, .header .container, .modal__title, .actions__icon, .actions__network, .actions {
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
 @media screen and (min-width: 768px) {
-  .footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__navigation, .header .container, .modal__title, .actions__icon, .actions__network, .actions {
+  .filter, .footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__navigation, .header .container, .modal__title, .actions__icon, .actions__network, .actions {
     display: flex;
     align-items: center;
     justify-content: center;
   }
 }
 
-.address__contact, .address__map, .customers__link, .customers__logo--accent, .form__button--effects, .form__textarea, .form__icon, .form__input, .modal__cross, .modal, .contacts__link--hover, .nav__link, .actions__network--white, .actions__icon--white, .actions__network--grey, .mobile-contacts-link, .mobile-menu-link, .menu-cls-btn {
+.shadow, .apps__overlay, .filter__button, .address__contact, .address__map, .customers__link, .customers__logo--accent, .form__button--effects, .form__textarea, .form__icon, .form__input, .modal__cross, .modal, .contacts__link--hover, .nav__link, .actions__network--white, .actions__icon--white, .actions__network--grey, .mobile-contacts-link, .mobile-menu-link, .menu-cls-btn {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -679,12 +679,12 @@
 }
 @media screen and (min-width: 1200px) {
   .decision {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bgr/img_bgr_desk_sm.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/bgr/img_bgr_desk_sm.jpg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .decision {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bgr/img_bgr_desk_lg.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/bgr/img_bgr_desk_lg.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1360,4 +1360,116 @@
     margin: 0;
     width: 231px;
   }
+}
+
+.portfolio {
+  padding-top: 94px;
+}
+
+.filter {
+  margin-bottom: 50px;
+}
+.filter__item:not(:last-child) {
+  margin-right: 8px;
+}
+.filter__item {
+  display: block;
+}
+
+.filter__button {
+  display: block;
+  border-radius: 4px;
+  padding: 6px 22px;
+  border: none;
+  color: #212121;
+  background-color: #f5f4fa;
+  font-family: inherit;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  transition-property: color, background-color, border-color;
+}
+.filter__button:hover, .filter__button:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.large {
+  padding: 6px 25px;
+  min-width: 73px;
+}
+
+.apps {
+  display: flex;
+  flex-wrap: wrap;
+}
+.apps__element {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  width: 370px;
+}
+.apps__image {
+  position: relative;
+  overflow: hidden;
+}
+.apps__block {
+  display: block;
+}
+.apps__deskr {
+  border-bottom: 1px solid rgb(238, 238, 238);
+  border-right: 1px solid rgb(238, 238, 238);
+  border-left: 1px solid rgb(238, 238, 238);
+}
+
+.apps__overlay {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+  transition-property: opacity, transform;
+}
+.apps__overlay > p {
+  margin: 0;
+  padding: 63px 24px;
+  text-align: left;
+  font-size: 18px;
+  line-height: 1.56;
+}
+
+.shadow {
+  transition-property: box-shadow;
+  display: block;
+  text-decoration: none;
+}
+.shadow:hover .apps__overlay, .shadow:focus .apps__overlay {
+  opacity: 1;
+  transform: translateY(-294px);
+}
+.shadow:hover, .shadow:focus {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.apps__element:nth-child(3n) {
+  margin-right: 0;
+}
+
+.apps__element:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+
+.apps__member {
+  margin: 0;
+  padding-top: 30px;
+  margin-bottom: 4px;
+  padding-left: 24px;
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
 }/*# sourceMappingURL=main.css.map */
