--- a/sass/layout/_decision.scss
+++ b/sass/layout/_decision.scss
@@ -62,7 +62,7 @@
   }
 
   @media screen and (min-width: $desktop) {
-    height: 600px;
+    height: auto;
     padding-top: 200px;
     padding-bottom: 200px;
     background-color: $new-bgr;
