--- a/css/main.css
+++ b/css/main.css
@@ -689,7 +689,7 @@
 }
 @media screen and (min-width: 1200px) {
   .decision {
-    height: 600px;
+    height: auto;
     padding-top: 200px;
     padding-bottom: 200px;
     background-color: rgb(196, 196, 196);
